app2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: myapp2
spec:
 selector:
   matchLabels:
     app: myapp2
 template:
   metadata:
     labels:
       app: myapp2
   spec:
     containers:
     - name: myapp2
       image: ikubernetes/myapp:v2
       resources:
         limits:
           memory: "128Mi"
           cpu: "500m"
       ports:
       - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
 name: myapp2
spec:
 type: ClusterIP
 selector:
   app: myapp2
 ports:
 - port: 80
   targetPort: 80
